kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trivy-operator-web-ui
  labels:
    app: trivy-operator-web-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trivy-operator-web-ui
  template:
    metadata:
      labels:
        app: trivy-operator-web-ui
    spec:
      serviceAccountName: trivy-operator-web-ui
      containers:
      - name: trivy-operator-web-ui
        image: ghcr.io/abwassim/trivy-operator-web-ui:1.0.2
        resources:
          limits:
            memory: 128Mi
          requests:
            cpu: 30m
