kubernetes/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: trivy-operator-web-ui
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    # Rule on the Host
    match: Host(`operator.127.0.0.1.sslip.io`)
    # Attach a middleware
    middlewares:
    - name: cors
      namespace: trivy-operator-web-ui
    # Set a pirority
    priority: 10
    services:
    # Target a Kubernetes Support
    - kind: Service
      name: trivy-operator-web-ui
      namespace: trivy-operator-web-ui
      port: 8080
      responseForwarding:
        flushInterval: 1ms
      scheme: http
      strategy: RoundRobin
      weight: 10
